--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1337,11 +1337,6 @@ select {
   --tw-ring-color: rgb(66 56 157 / var(--tw-ring-opacity));
 }
 
-.iframe-container {
-  -webkit-filter: blur(3px);
-  filter: blur(3px);
-}
-
 .min-h-screen {
   min-height: 100vh;
 }
@@ -2395,6 +2390,10 @@ select {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .px-4 {
