--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1879,16 +1879,6 @@ select {
   width: 50%;
 }
 
-.w-max {
-  width: -webkit-max-content;
-  width: max-content;
-}
-
-.w-min {
-  width: -webkit-min-content;
-  width: min-content;
-}
-
 .min-w-0 {
   min-width: 0px;
 }
@@ -1935,12 +1925,6 @@ select {
 
 .border-collapse {
   border-collapse: collapse;
-}
-
-.translate-y-2\/4 {
-  --tw-translate-y: 50%;
-  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-rotate-90 {
@@ -2404,16 +2388,16 @@ select {
   padding: 0.5rem;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .p-5 {
   padding: 1.25rem;
 }
 
 .p-4 {
   padding: 1rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
 }
 
 .px-4 {
@@ -2540,6 +2524,10 @@ select {
   padding-bottom: 1.25rem;
 }
 
+.pb-0 {
+  padding-bottom: 0px;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -2574,10 +2562,6 @@ select {
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pb-0 {
-  padding-bottom: 0px;
 }
 
 .pt-12 {
@@ -3553,6 +3537,10 @@ select {
   .md\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+  }
+
+  .md\:pb-16 {
+    padding-bottom: 4rem;
   }
 
   .md\:pr-12 {
